# BNS-CryptoLib

./: .gitignore  README.md  build.sh
modules/blake3/: CMakeLists.txt  README.md
modules/blake3/jni/java/: Blake3.java
modules/blake3/jni/src/: CMakeLists.txt  network_beechat_Blake3.c
modules/blake3/src/: CMakeLists.txt
modules/blake3/src/blake3/: CMakeLists.txt  arm32.cmake  arm64.cmake  network_beechat_Blake3.c  network_beechat_Blake3.h  x86.cmake
modules/blake3/src/blake3/arm32/: CMakeLists.txt
modules/blake3/src/blake3/cmake/: compile_options.cmake  source.cmake
modules/blake3/src/blake3/cmake/android/: CMakeLists.txt
modules/blake3/src/blake3/cmake/arm32/: CMakeLists.txt
modules/blake3/src/blake3/cmake/arm64/: CMakeLists.txt
modules/blake3/src/blake3/cmake/x86/: CMakeLists.txt
modules/blake3/src/java/: .Blake3.java.swo  Blake3.java
modules/blake3/test/: .gitignore  CMakeLists.txt  Makefile  README.md  diagram.py  manifest.mf
modules/blake3/test/android/: AndroidManifest.xml
modules/blake3/test/android/java/net/test/: MainActivity.java  PrimeThread.java
modules/blake3/test/android/res/layout/: activity_main.xml
modules/blake3/test/network/beechat/: .gitignore  Blake3JNIx86Test.java
modules/dilithium/arm/: CMakeLists.txt  README.md  build.sh
modules/dilithium/arm/ref/: CMakeLists.txt
modules/dilithium/jni/: README.md
modules/dilithium/jni/jni/android/: CMakeLists.txt
modules/dilithium/jni/jni/java/: Dilithium.java  DilithiumAes.java
modules/dilithium/jni/jni/java/network/beechat/: Dilithium.java
modules/dilithium/jni/jni/ref/: CMakeLists.txt  sign.c  sign_aes.c  ssign.h  ssign_aes.h
modules/dilithium/jni/test/: .gitignore  Makefile  manifest.mf
modules/dilithium/jni/test/android/: AndroidManifest.xml  build_apk.sh
modules/dilithium/jni/test/android/java/net/test/: Dilithium.java  DilithiumAes.java  MainActivity.java
modules/dilithium/jni/test/network/beechat/: Dilithium.java  DilithiumAes.java  Main.java
modules/dilithium/py/: CMakeLists.txt  README.md
modules/dilithium/py/src/ref/: bindings.cpp  bindings_aes.cpp
modules/dilithium/py/test/: sign.py  sign_aes.py
modules/kyber/arm/: CMakeLists.txt  README.md  build.sh  runtests.sh
modules/kyber/arm/ref/: CMakeLists.txt  cpucycles.c  cpucycles.h
modules/kyber/arm/ref/speed_test/: install_module.sh  test.sh
modules/kyber/arm/ref/speed_test/clock_module/: Makefile  clock_enabler.c  clock_enabler64.c
modules/kyber/jni/jni/android/: CMakeLists.txt
modules/kyber/jni/jni/java/: Kyber512.java  Kyber512_90s.java
modules/kyber/jni/jni/ref/: CMakeLists.txt  kem.c  kem_90s.c  network_beechat_Kyber512.h  network_beechat_Kyber512_90s.h
modules/kyber/jni/test/: .gitignore  Makefile
modules/kyber/jni/test/android/: build_apk.sh
modules/kyber/jni/test/android/java/net/test/: MainActivity.java
modules/kyber/jni/test/network/beechat/: Main.java
toolchain/aarch64-linux-gnu/: gcc-linaro-7.5.0-2019.12-linux-manifest.txt
toolchain/aarch64-linux-gnu/aarch64-linux-gnu/lib/ldscripts/: aarch64elf.x  aarch64elf.xbn  aarch64elf.xc  aarch64elf.xd  aarch64elf.xdc  aarch64elf.xdw  aarch64elf.xn  aarch64elf.xs  aarch64elf.xsc  aarch64elf.xsw  aarch64elf.xw  aarch64elf32.x  aarch64elf32.xbn  aarch64elf32.xc  aarch64elf32.xd  aarch64elf32.xdc  aarch64elf32.xdw  aarch64elf32.xn  aarch64elf32.xs  aarch64elf32.xsc  aarch64elf32.xsw  aarch64elf32.xw  aarch64elf32b.x  aarch64elf32b.xbn  aarch64elf32b.xc  aarch64elf32b.xd  aarch64elf32b.xdc  aarch64elf32b.xdw  aarch64elf32b.xn  aarch64elf32b.xs  aarch64elf32b.xsc  aarch64elf32b.xsw  aarch64elf32b.xw  aarch64elfb.x  aarch64elfb.xbn  aarch64elfb.xc  aarch64elfb.xd  aarch64elfb.xdc  aarch64elfb.xdw  aarch64elfb.xn  (+92 more)
toolchain/aarch64-linux-gnu/aarch64-linux-gnu/lib64/: libatomic.so.1.2.0  liblsan.so.0.0.0  libubsan.so.0.0.0
toolchain/aarch64-linux-gnu/aarch64-linux-gnu/libc/lib/: libgcc_s.so.1  libgomp.so.1.0.0  libitm.so.1.0.0  libssp.so.0.0.0  libstdc++.so.6.0.24-gdb.py
toolchain/aarch64-linux-gnu/aarch64-linux-gnu/libc/usr/libexec/getconf/: POSIX_V7_LP64_OFF64
toolchain/aarch64-linux-gnu/aarch64-linux-gnu/libc/usr/sbin/: iconvconfig  nscd  zdump  zic
toolchain/aarch64-linux-gnu/include/: gmp.h
toolchain/aarch64-linux-gnu/lib/: libcc1.so.0.0.0
toolchain/aarch64-linux-gnu/lib/gcc/aarch64-linux-gnu/7.5.0/plugin/: gtype.state  libcc1plugin.so.0.0.0  libcp1plugin.so.0.0.0
toolchain/aarch64-linux-gnu/lib/gcc/aarch64-linux-gnu/7.5.0/plugin/include/: auto-host.h  configargs.h
toolchain/aarch64-linux-gnu/libexec/gcc/aarch64-linux-gnu/7.5.0/: collect2  liblto_plugin.so.0.0.0  lto-wrapper
toolchain/aarch64-linux-gnu/libexec/gcc/aarch64-linux-gnu/7.5.0/install-tools/: fixincl  mkheaders
toolchain/aarch64-linux-gnu/libexec/gcc/aarch64-linux-gnu/7.5.0/plugin/: gengtype
